--- a/app.json
+++ b/app.json
@@ -4,23 +4,21 @@
     "slug": "MovementTracing",
     "version": "1.0.0",
     "orientation": "portrait",
-    "icon": "./assets/icon.png",
+    "icon": "./app/assets/logo/icon.png",
     "splash": {
-      "image": "./assets/splash.png",
+      "image": "./app/assets/logo/splash.png",
       "resizeMode": "contain",
       "backgroundColor": "#ffffff"
     },
     "updates": {
       "fallbackToCacheTimeout": 0
     },
-    "assetBundlePatterns": [
-      "**/*"
-    ],
+    "assetBundlePatterns": ["**/*"],
     "ios": {
       "supportsTablet": true
     },
     "web": {
-      "favicon": "./assets/favicon.png"
+      "favicon": "./app/assets/logo/favicon.png"
     }
   }
 }
