--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "eject": "expo eject"
   },
   "dependencies": {
-    "expo": "~38.0.8",
+    "@react-native-community/datetimepicker": "2.4.0",
+    "expo": "^38.0.9",
     "expo-status-bar": "^1.0.2",
     "react": "~16.11.0",
     "react-dom": "~16.11.0",
