--- a/package.json
+++ b/package.json
@@ -20,11 +20,15 @@
     "react-native": "https://github.com/expo/react-native/archive/sdk-38.0.2.tar.gz",
     "react-native-dropdown-picker": "^3.1.11",
     "react-native-gesture-handler": "~1.6.0",
+    "react-native-pod": "^1.12.1",
+    "react-native-popup-dialog": "^0.18.3",
     "react-native-reanimated": "~1.9.0",
     "react-native-safe-area-context": "~3.0.7",
     "react-native-screens": "~2.9.0",
+    "react-native-swipeout": "^2.3.6",
     "react-native-web": "~0.11.7",
-    "react-navigation-stack": "^2.8.2"
+    "react-navigation-stack": "^2.8.2",
+    "realm": "^6.0.4"
   },
   "devDependencies": {
     "@babel/core": "^7.8.6",
