--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react-native": "https://github.com/expo/react-native/archive/sdk-38.0.2.tar.gz",
     "react-native-dropdown-picker": "^3.1.11",
     "react-native-gesture-handler": "~1.6.0",
+    "react-native-get-location": "^1.4.3",
     "react-native-pod": "^1.12.1",
     "react-native-popup-dialog": "^0.18.3",
     "react-native-reanimated": "~1.9.0",
